# doquery

./: .gitignore  README.md
backend/: .env.example  README.md  db_setup_readme.md  generate_requirements.py  init_db.py  pyproject.toml  requirements.txt  setup_db.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: documents.py  guidelines.py  queries.py  search.py
backend/app/core/: config.py  logging_config.py
backend/app/db/: base.py  base_class.py  init_db.py
backend/app/ml/: __init__.py  base.py  huggingface_provider.py  local_provider.py  openai_provider.py  provider.py
backend/app/models/: document.py
backend/app/schemas/: document.py  query.py
backend/app/services/: document.py  query.py  search.py
backend/app/utils/: document_processor.py  embeddings.py  text.py  text_splitter.py  tokenizer.py
backend/db_scripts/: alter_document_table.py  check_table_schema.py  fix_db_schema.py  fix_id_column.py  init_db.py  init_pgvector.py  setup_db.py
backend/tests/: test_api.py
frontend/: README.md  package-lock.json  package.json
frontend/.next/: react-loadable-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: _error.js  middleware-react-loadable-manifest.js
frontend/.next/server/pages/: _app.js  _document.js  _error.js  index.js
frontend/.next/server/vendor-chunks/: next.js
frontend/.next/static/chunks/: _error.js  webpack.js
frontend/src/components/: Layout.tsx  Navbar.tsx  QueryForm.tsx  UploadForm.tsx
frontend/src/pages/: index.tsx
(+13 files in other folders)
